[package]
name = "knoflik-sdr"
version = "0.1.0"
edition = "2024"
description = "SDR přijímač pro SoftRock - I/Q ze zvukové karty, ladění Si570 přes USB"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/petr-komin/KnoflikSDR"
keywords = ["sdr", "softrock", "si570", "ham-radio", "dsp"]
categories = ["science", "multimedia::audio"]

[dependencies]
alsa = "0.11"
anyhow = "1.0.103"
eframe = "0.35.0"
egui = "0.35.0"
num-complex = "0.4.6"
rtrb = "0.3.4"
rusb = "0.9.4"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"
