[package]
name = "knoflik-sdr"
version = "0.1.0"
edition = "2024"
description = "SDR přijímač pro SoftRock - I/Q ze zvukové karty, ladění Si570 přes USB"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/petr-komin/KnoflikSDR"
keywords = ["sdr", "softrock", "si570", "ham-radio", "dsp"]
categories = ["science", "multimedia::audio"]

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
# Záměrně glow (OpenGL) místo výchozího wgpu. wgpu na Linuxu chce Vulkan,
# a když pro kartu není Vulkan ovladač, spadne do softwarového llvmpipe -
# ten pak vykreslováním sežere klidně šest jader. OpenGL bývá funkční vždy.
eframe = { version = "0.35.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.35.0"
num-complex = "0.4.6"
rtrb = "0.3.4"
rusb = "0.9.4"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"
ureq = "3.3.0"

# Zvuk je jediné, co se mezi systémy liší. Na Linuxu jdeme na ALSA napřímo -
# jen tak se dostaneme na packed 24 bit (S243LE), což je na dynamickém rozsahu
# panoramatu znát. Jinde to jede přes cpal (WASAPI / CoreAudio), kde o formát
# rozhoduje zvukový server a hloubka bývá menší.
# SDRplay RSP1 jede přes SoapySDR, což je systémová knihovna dostupná jen na Linuxu
# (a chce libsoapysdr-dev). Kdo má jen SoftRock, může si ji odpustit: `--no-default-features`.
[features]
default = ["rsp1"]
rsp1 = ["dep:soapysdr"]

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11"
soapysdr = { version = "0.4", optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.18"
